--- a/phone/pinephone/keyboard.htm
+++ b/phone/pinephone/keyboard.htm
@@ -97,7 +97,16 @@ GPD MicroPC和PinePhone<br>
 <img src="keyboard/13.jpg" class="maxSize"><br><br>
 
 F(x)tec Pro1 X和PinePhone<br>
-<img src="keyboard/14.jpg" class="maxSize">
+<img src="keyboard/14.jpg" class="maxSize"><br><br>
+
+拆掉背殼<br>
+<img src="keyboard/15.jpg" class="maxSize"><br><br>
+
+IP5209、TXS0104E、EM85F684A<br>
+<img src="keyboard/16.jpg" class="maxSize"><br><br>
+
+背面<br>
+<img src="keyboard/17.jpg" class="maxSize">
 </p>
 
 <p>
