--- a/program/leetcode/c_note.htm
+++ b/program/leetcode/c_note.htm
@@ -51,7 +51,11 @@
 參考資訊：<br>
 1. <a href="https://leetcode.com/">leetcode</a><br><br>
 
-題目：<br>
+注意事項：<br>
+1. 盡量不要使用Global變數<br>
+2. 需要配置的記憶體：回傳的指標(二維)、每個陣列的大小(一維)<br><br>
+
+Global變數問題如下：<br>
 <img src="c_note/1.jpg" class="maxSize"><br><br>
 
 寫完後：
@@ -67,7 +71,7 @@ void push(char ch)
 
 void pop(void)
 {
-    if(idx &gt; 0){
+    if (idx &gt; 0) {
         idx-= 1;
         p[idx] = 0;
     }
@@ -148,7 +152,7 @@ Shadow byte legend (one shadow byte represents 8 application bytes):
 </pre><br>
 
 <p>
-最後發現，在LeetCode使用C語言時，使用Global變數會有限制，因此，建議不用使用Global變數，改成如下即可：
+最後司徒發現，LeetCode的C語言，在使用Global變數時會有諸多限制，因此，建議不用使用Global變數，改成如下即可：
 </p>
 <pre class="brush:cpp">
 void push(char *p, int *idx, char ch)
@@ -184,7 +188,7 @@ char* removeStars(char *s)
 </pre><br>
 
 <p>
-另一個比較需要注意的事情，就是配置二維記憶體，如下範例(只列出部份程式碼)：
+二維記憶體配置如下：
 </p>
 <pre class="brush:cpp">
 int** flipAndInvertImage(int **image, int imageSize, int *imageColSize, int *returnSize, int **returnColumnSizes)
@@ -208,9 +212,9 @@ int** flipAndInvertImage(int **image, int imageSize, int *imageColSize, int *ret
 }
 </pre>
 <p>
-L3：直接填寫(不用配置)<br>
-L9-L12：需要配置一維記憶體<br>
-L15-L17：需要配置二維記憶體
+Line 3：直接填寫(不用配置)<br>
+Line 9~12：需要配置一維記憶體<br>
+Line 15~17：需要配置二維記憶體
 </p>
 
 <p>
