--- a/handheld.htm
+++ b/handheld.htm
@@ -263,6 +263,10 @@ printk使用的UART</a><br>
 如何製作可開機SDCard</a><br>
 
 &lowast;
+<a href="handheld/pyra/fix_underscore.htm">
+解決bookworm系統沒有"_、:"符號的問題</a><br>
+
+&lowast;
 <a href="handheld/pyra/fix_readonly.htm">
 解決"read-only member vm_flags"問題</a><br>
 
@@ -819,6 +823,10 @@ gen_checksum.py</a><br>
 &lowast;
 <a href="handheld/gaviar/i80.htm">
 關於8080屏、i80屏、MCU屏</a><br>
+
+&lowast;
+<a href="handheld/gaviar/build_tina-linux.htm">
+build tina-linux</a><br>
 
 &lowast;
 <a href="handheld/gaviar/mio.htm">
