--- a/system/debian/runlevel.htm
+++ b/system/debian/runlevel.htm
@@ -56,6 +56,9 @@
 <pre>
 # systemctl set-default multi-user.target
     Created symlink /etc/systemd/system/default.target → /lib/systemd/system/multi-user.target.
+
+# systemctl set-default graphical.target
+    Created symlink /etc/systemd/system/default.target → /lib/systemd/system/graphical.target.
 </pre><br>
 
 <p>
