Miyoo Mini Plus Refined.

--- a/handheld/miyoo-mini-plus/pinout.htm
+++ b/handheld/miyoo-mini-plus/pinout.htm
@@ -70,6 +70,7 @@
 <tr><th>VOL-</th><td>GPIO-42</td></tr>
 <tr><th>VOL+</th><td>GPIO-43</td></tr>
 <tr><th>POWER</th><td>GPIO-71</td></tr>
+<tr><th>MOTOR</th><td>GPIO-48</td></tr>
 </table><br>
 
 <p>
