--- a/handheld.htm
+++ b/handheld.htm
@@ -6546,6 +6546,10 @@ repack uImage.xz</a><br>
 如何調整PWM</a><br>
 
 &lowast;
+<a href="handheld/miyoo-mini-plus/motor.htm">
+如何啟動馬達</a><br>
+
+&lowast;
 <a href="handheld/miyoo-mini-plus/extract_uboot.htm">
 如何Extract U-Boot</a><br>
 
