Debian How to set both rows and cols in minicom.

--- a/system.htm
+++ b/system.htm
@@ -241,6 +241,10 @@ VirtualBox產生vboxnet0 192.168.56.1</a><br>
 如何讓minicom彩色化</a><br>
 
 &lowast;
+<a href="system/debian/minicom_rows.htm">
+如何改變minicom rows、cols</a><br>
+
+&lowast;
 <a href="system/debian/shell2file.htm">
 如何把Shell的執行過程存到檔案</a><br>
 
