Pyra Fix secclass_map issue.

--- a/handheld.htm
+++ b/handheld.htm
@@ -275,6 +275,10 @@ printk使用的UART</a><br>
 解決"read-only member vm_flags"問題</a><br>
 
 &lowast;
+<a href="handheld/pyra/fix_secclass.htm">
+解決"please update secclass_map"問題</a><br>
+
+&lowast;
 <a href="handheld/pyra/fix_hdmi.htm">
 解決"drivers/bus/omap_l3_noc.c:147 l3_interrupt_handler"問題</a><br>
 
