Pyra Fix gcc issue.

--- a/handheld.htm
+++ b/handheld.htm
@@ -283,6 +283,10 @@ printk使用的UART</a><br>
 解決"drivers/bus/omap_l3_noc.c:147 l3_interrupt_handler"問題</a><br>
 
 &lowast;
+<a href="handheld/pyra/fix_arch.htm">
+解決"selected processor does not support cpsid i in ARM mode"問題</a><br>
+
+&lowast;
 <a href="handheld/pyra/interconn.htm">
 Interconnect Overview</a><br>
 
