--- a/handheld.htm
+++ b/handheld.htm
@@ -801,6 +801,10 @@ Gaviar (小志掌機)</h3>
 拆機</a><br>
 
 &lowast;
+<a href="handheld/gaviar/screen.htm">
+可視角</a><br>
+
+&lowast;
 <a href="handheld/gaviar/block.htm">
 方塊圖</a><br>
 
