--- a/handheld.htm
+++ b/handheld.htm
@@ -805,6 +805,10 @@ Gaviar (小志掌機)</h3>
 可視角</a><br>
 
 &lowast;
+<a href="handheld/gaviar/screen2.htm">
+可視角(v2)</a><br>
+
+&lowast;
 <a href="handheld/gaviar/block.htm">
 方塊圖</a><br>
 
