--- a/handheld/gaviar/teardown2.htm
+++ b/handheld/gaviar/teardown2.htm
@@ -93,7 +93,10 @@ PCB<br>
 新增振動馬達的槽位<br>
 <img src="teardown2/15.jpg" class="maxSize"><br><br>
 
-T133-S3(双核心Cortex-A7 1.2GHz, RAM 128MB)、F133(RISC-V RV64GCV 533MHz, RAM 64MB)、D1s(RISC-V RV64GCV 533MHz, RAM 64MB)都是相容腳位，因此，玩家也可以替換成高效能的T133-S3進行移植<br>
+D1s(單核心RISC-V RV64GCV 533MHz, RAM 64MB)<br>
+F133(單核心RISC-V RV64GCV 533MHz, RAM 64MB)<br>
+T113-S3(双核心Cortex-A7 1.2GHz, RAM 128MB)<br>
+以上3顆晶片都是相容的腳位，因此，玩家也可以替換成高效能的T113-S3進行移植<br>
 <img src="teardown2/16.jpg" class="maxSize"><br>
 <img src="teardown2/17.jpg" class="maxSize">
 </p>
