--- a/program/leetcode/c_note.htm
+++ b/program/leetcode/c_note.htm
@@ -53,7 +53,8 @@
 
 注意事項：<br>
 1. 盡量不要使用Global變數<br>
-2. 需要配置的記憶體：回傳的指標(二維)、每個陣列的大小(一維)<br><br>
+2. 需要配置的記憶體：回傳的指標(二維)、每個陣列的大小(一維)<br>
+3. 結構存取最好透過變數<br><br>
 
 Global變數問題如下：<br>
 <img src="c_note/1.jpg" class="maxSize"><br><br>
@@ -152,7 +153,7 @@ Shadow byte legend (one shadow byte represents 8 application bytes):
 </pre><br>
 
 <p>
-最後司徒發現，LeetCode的C語言，在使用Global變數時會有諸多限制，因此，建議不用使用Global變數，改成如下即可：
+建議不要使用Global變數，改成如下即可：
 </p>
 <pre class="brush:cpp">
 void push(char *p, int *idx, char ch)
@@ -214,7 +215,13 @@ int** flipAndInvertImage(int **image, int imageSize, int *imageColSize, int *ret
 <p>
 Line 3：直接填寫(不用配置)<br>
 Line 9~12：需要配置一維記憶體<br>
-Line 15~17：需要配置二維記憶體
+Line 15~17：需要配置二維記憶體<br><br>
+
+一個詭異的結構存取問題，下面例子只有將最左邊的數值累加，2 + 5 = 7，但是結果卻是5<br>
+<img src="c_note/2.jpg" class="maxSize"><br><br>
+
+解法是透過變數做累加，2 + 5 = 7<br>
+<img src="c_note/3.jpg" class="maxSize">
 </p>
 
 <p>
