LDD How to check container items in kernel config. file

--- a/driver.htm
+++ b/driver.htm
@@ -378,6 +378,10 @@ Kernel command line(CONFIG_CMDLINE)加上"--"</a><br>
 如何知道目前process是否位於container裡面</a><br>
 
 &lowast;
+<a href="driver/ldd/container_check.htm">
+如何知道container需要的kernel config選項</a><br>
+
+&lowast;
 <a href="driver/ldd/fix_this_module.htm">
 解決"module_put"問題</a><br>
 
