--- a/handheld.htm
+++ b/handheld.htm
@@ -297,6 +297,13 @@ build uboot</a><br>
 &lowast;
 <a href="handheld/pyra/build_kernel.htm">
 build kernel</a><br>
+
+&oplus;
+<b>Debian 12</b><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/pyra/debian_xmodmap.htm">
+    Xmodmap</a><br>
 <br><br><br><br>
 
 <div id="pandora1"></div>
