--- a/handheld.htm
+++ b/handheld.htm
@@ -287,6 +287,10 @@ printk使用的UART</a><br>
 解決"selected processor does not support cpsid i in ARM mode"問題</a><br>
 
 &lowast;
+<a href="handheld/pyra/tier.htm">
+High-Tier Environment</a><br>
+
+&lowast;
 <a href="handheld/pyra/interconn.htm">
 Interconnect Overview</a><br>
 
