Pyra Added pad setting image.

--- a/handheld.htm
+++ b/handheld.htm
@@ -299,6 +299,10 @@ High-Tier Environment</a><br>
 Interconnect Overview</a><br>
 
 &lowast;
+<a href="handheld/pyra/pcr.htm">
+Pad Configuration Register</a><br>
+
+&lowast;
 <a href="handheld/pyra/build_uboot.htm">
 build uboot</a><br>
 
