Pyra How to prepare developing environment.

--- a/handheld.htm
+++ b/handheld.htm
@@ -311,6 +311,13 @@ build uboot</a><br>
 build kernel</a><br>
 
 &oplus;
+<b>Assembly</b><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/pyra/asm_setup.htm">
+    開發環境</a><br>
+
+&oplus;
 <b>Debian 12</b><br>
     
     &emsp;&emsp;&emsp;&emsp;&lowast;
