Pyra How to blink keyboard backlight in assembly.

--- a/handheld.htm
+++ b/handheld.htm
@@ -317,6 +317,10 @@ build kernel</a><br>
     <a href="handheld/pyra/asm_setup.htm">
     開發環境</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/pyra/asm_kbl.htm">
+    Keyboard Backlight</a><br>
+
 &oplus;
 <b>Debian 12</b><br>
     
