--- a/handheld.htm
+++ b/handheld.htm
@@ -263,6 +263,10 @@ printk使用的UART</a><br>
 如何製作可開機SDCard</a><br>
 
 &lowast;
+<a href="handheld/pyra/loady.htm">
+如何透過minicom傳送檔案到U-Boot</a><br>
+
+&lowast;
 <a href="handheld/pyra/backcover.htm">
 解決背蓋不平的問題</a><br>
 
