Miyoo Mini Plus How to mount jffs2 file.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6604,6 +6604,10 @@ repack uImage.xz</a><br>
 如何啟動馬達</a><br>
 
 &lowast;
+<a href="handheld/miyoo-mini-plus/mount_jffs2.htm">
+如何掛載jffs2檔案</a><br>
+
+&lowast;
 <a href="handheld/miyoo-mini-plus/extract_uboot.htm">
 如何Extract U-Boot</a><br>
 
