Miyoo Mini Plus Added kallsym lists.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6632,6 +6632,12 @@ repack uImage.xz</a><br>
 解決"SigmaStar U-Boot fatload"不正常的問題</a><br>
 
 &oplus;
+<b>Stock</b><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/miyoo-mini-plus/kallsym.htm">
+    kallsym</a><br>
+
+&oplus;
 <b>C/C++</b><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/miyoo-mini-plus/cpp_gpio.htm">
