Miyoo Mini Plus Refined.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6572,10 +6572,6 @@ Miyoo Mini Plus</h3>
 接腳</a><br>
 
 &lowast;
-<a href="handheld/miyoo-mini-plus/dmesg.htm">
-dmesg</a><br>
-
-&lowast;
 <a href="handheld/miyoo-mini-plus/pin.htm">
 腳位圖</a><br>
 
@@ -6633,6 +6629,10 @@ repack uImage.xz</a><br>
 
 &oplus;
 <b>Stock</b><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/miyoo-mini-plus/dmesg.htm">
+    dmesg</a><br>
+
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/miyoo-mini-plus/kallsym.htm">
     kallsym</a><br>
