--- a/handheld/miyoo-mini-plus/dmesg.htm
+++ b/handheld/miyoo-mini-plus/dmesg.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Miyoo Mini Plus</h3>
+<h3>Miyoo Mini Plus &gt;&gt; Stock</h3>
 <p><b>dmesg</b></p>
 <hr size="1">
 <p>
