Miyoo Mini Plus How to turn wifi on.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6600,6 +6600,10 @@ repack uImage.xz</a><br>
 如何啟動馬達</a><br>
 
 &lowast;
+<a href="handheld/miyoo-mini-plus/wifi.htm">
+如何開啟wifi</a><br>
+
+&lowast;
 <a href="handheld/miyoo-mini-plus/mount_jffs2.htm">
 如何掛載jffs2檔案</a><br>
 
