Miyoo Mini Plus How to build kernel.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6642,6 +6642,12 @@ repack uImage.xz</a><br>
     kallsym</a><br>
 
 &oplus;
+<b>Linux</b><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/miyoo-mini-plus/cfw_build_kernel.htm">
+    build kernel</a><br>
+    
+&oplus;
 <b>C/C++</b><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/miyoo-mini-plus/cpp_gpio.htm">
