Miyoo Mini Plus How to set pixel clock.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6647,6 +6647,10 @@ repack uImage.xz</a><br>
     <a href="handheld/miyoo-mini-plus/cfw_build_kernel.htm">
     build kernel</a><br>
     
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/miyoo-mini-plus/cfw_setpixelclock.htm">
+    set pixel clock</a><br>
+
 &oplus;
 <b>C/C++</b><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
