GNU Added crc32 example in C.

--- a/program.htm
+++ b/program.htm
@@ -122,6 +122,10 @@ GNU</h3>
     hello, world!</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/gnu/cpp_crc32.htm">
+    crc32</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/gnu/cpp_popen.htm">
     popen</a><br>
 
