Miyoo Mini Plus How to calculate uboot's crc32.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6628,6 +6628,10 @@ repack uImage.xz</a><br>
 如何Extract Kernel Device Tree</a><br>
 
 &lowast;
+<a href="handheld/miyoo-mini-plus/uboot_crc32.htm">
+如何更新U-Boot Environment CRC32</a><br>
+
+&lowast;
 <a href="handheld/miyoo-mini-plus/fatload.htm">
 解決"SigmaStar U-Boot fatload"不正常的問題</a><br>
 
