--- a/handheld.htm
+++ b/handheld.htm
@@ -6660,10 +6660,14 @@ repack uImage.xz</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/miyoo-mini-plus/cpp_gpio.htm">
     Read GPIO</a><br>
-    
+
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/miyoo-mini-plus/cpp_sdl.htm">
     SDL Screen Rotation</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/miyoo-mini-plus/cpp_uboot.htm">
+    Print U-Boot Environment Variables</a><br>
 <br><br><br><br>
 
 <div id="32blit"></div>
