--- a/phone/n900/maemo/git.htm
+++ b/phone/n900/maemo/git.htm
@@ -92,6 +92,14 @@ $ git filter-branch --tree-filter 'rm -f xxx' HEAD
 </pre><br>
 
 <p>
+Restore status and remove the new files
+</p>
+<pre>
+$ git reset --hard
+$ git clean -f -d
+</pre><br>
+
+<p>
 <br><a href="../../../phone.htm">返回上一頁</a>
 </p>
 
