iriver Dicple D88 Added review page.

--- a/umpc.htm
+++ b/umpc.htm
@@ -74,6 +74,7 @@
 <div id="page">
 <br><br>
 <p>
+    <a href="#d88"><img src="img/photos/d88.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="iriver Dicple D88"/></a>
     <a href="#c700"><img src="img/photos/c700.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zaurus SL-C700"/></a>
     <a href="#c750"><img src="img/photos/c750.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zaurus SL-C750"/></a>
     <a href="#c760"><img src="img/photos/c760.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zaurus SL-C760"/></a>
@@ -181,6 +182,16 @@
 <div id="page">
 <br><br>
 <p>
+<div id="d88"></div>
+<h3><img src="img/photos/d88.jpg" class="floatLeft"/>
+iriver Dicple D88</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/d88/review.htm">
+介紹</a><br>
+<br><br><br><br>
+
 <div id="c700"></div>
 <h3><img src="img/photos/c700.jpg" class="floatLeft"/>
 Zaurus SL-C700</h3>
