--- a/umpc.htm
+++ b/umpc.htm
@@ -190,6 +190,11 @@ iriver Dicple D88</h3>
 &lowast;
 <a href="umpc/d88/review.htm">
 介紹</a><br>
+
+&lowast;
+<a href="umpc/d88/teardown.htm">
+拆機</a><br>
+
 <br><br><br><br>
 
 <div id="c700"></div>
