iriver Dicple D88 How to solder uart port.

--- a/umpc.htm
+++ b/umpc.htm
@@ -195,6 +195,9 @@ iriver Dicple D88</h3>
 <a href="umpc/d88/teardown.htm">
 拆機</a><br>
 
+&lowast;
+<a href="umpc/d88/uart.htm">
+焊接UART接頭</a><br>
 <br><br><br><br>
 
 <div id="c700"></div>
