iriver Dicple D88 Added nand information.

--- a/umpc.htm
+++ b/umpc.htm
@@ -198,6 +198,10 @@ iriver Dicple D88</h3>
 &lowast;
 <a href="umpc/d88/uart.htm">
 焊接UART接頭</a><br>
+
+&lowast;
+<a href="umpc/d88/nand.htm">
+NAND Partitions</a><br>
 <br><br><br><br>
 
 <div id="c700"></div>
