Debian How unpack/repack yaffs2.

--- a/system.htm
+++ b/system.htm
@@ -129,6 +129,10 @@ SSH Tunnel(rsync)</a><br>
 掛載ubifs檔案</a><br>
 
 &lowast;
+<a href="system/debian/yaffs2.htm">
+製作yaffs2檔案</a><br>
+
+&lowast;
 <a href="system/debian/clang-format.htm">
 clang-format</a><br>
 
