iriver Dicple D88 How to build uboot.

--- a/umpc.htm
+++ b/umpc.htm
@@ -202,6 +202,10 @@ iriver Dicple D88</h3>
 &lowast;
 <a href="umpc/d88/nand.htm">
 NAND Partitions</a><br>
+
+&lowast;
+<a href="umpc/d88/build_uboot.htm">
+build uboot</a><br>
 <br><br><br><br>
 
 <div id="c700"></div>
