iriver Dicple D88 Refined.

--- a/umpc/d88/build_uboot.htm
+++ b/umpc/d88/build_uboot.htm
@@ -55,6 +55,17 @@
 </p>
 <pre>
 $ cd
+$ wget https://github.com/steward-fu/archives/releases/download/d88/mipseltools-gcc412-glibc261.tar
+$ tar xvf mipseltools-gcc412-glibc261.tar
+$ sudo mv mipseltools-gcc412-glibc261 /opt/
+$ export PATH=/opt/mipseltools-gcc412-glibc261/bin:$PATH
+$ mipsel-linux-gcc --version
+    mipsel-linux-gcc (GCC) 4.1.2
+    Copyright (C) 2006 Free Software Foundation, Inc.
+    This is free software; see the source for copying conditions.  There is NO
+    warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+
+$ cd
 $ wget https://github.com/steward-fu/archives/releases/download/d88/D88-uboot.tar.bz2
 $ tar xvf D88-uboot.tar.bz2
 $ cd uboot
