iriver Dicple D88 Refined.

--- a/umpc/d88/teardown.htm
+++ b/umpc/d88/teardown.htm
@@ -96,7 +96,7 @@ LMS430HF15<br>
 JZ4755<br>
 <img src="teardown/16.jpg" class="maxSize"><br><br>
 
-ST2403、K9LBG08U0D<br>
+STMPE2403、K9LBG08U0D<br>
 <img src="teardown/17.jpg" class="maxSize"><br><br>
 
 WM8731、AR1010<br>
