--- a/program/leetcode/c_9.htm
+++ b/program/leetcode/c_9.htm
@@ -54,17 +54,20 @@
 題目：<br>
 <img src="c_9/1.jpg" class="maxSize"><br><br>
 
-答案：
+解答：
 </p>
 <pre class="brush:cpp">
 bool isPalindrome(int x)
 {
-    char buf[255]={0};
-    
+    char buf[255] = {0};
+    int n0 = 0, n1 = 0, c0 = 0;
+     
     snprintf(buf, sizeof(buf), "%d", x);
-    int len=strlen(buf), c0=0;
-    for(c0=0; c0&lt;(len&gt;&gt;1); c0++){
-        if(buf[c0] != buf[len - c0 - 1]){
+    n0 = strlen(buf);
+    n1 = n0 / 2;
+
+    for(c0 = 0; c0 &lt; n1; c0++){
+        if(buf[c0] != buf[n0 - c0 - 1]){
             return false;
         }
     }
