iriver Dicple D88 Added keyboard fpc.

--- a/umpc.htm
+++ b/umpc.htm
@@ -196,6 +196,10 @@ iriver Dicple D88</h3>
 拆機</a><br>
 
 &lowast;
+<a href="umpc/d88/fpc.htm">
+鍵盤FPC</a><br>
+
+&lowast;
 <a href="umpc/d88/uart.htm">
 焊接UART接頭</a><br>
 
