iriver Dicple D88 Added stmpe2403 gpio image.

--- a/umpc.htm
+++ b/umpc.htm
@@ -204,6 +204,10 @@ iriver Dicple D88</h3>
 焊接UART接頭</a><br>
 
 &lowast;
+<a href="umpc/d88/stmpe2403.htm">
+STMPE2403 GPIO</a><br>
+
+&lowast;
 <a href="umpc/d88/nand.htm">
 NAND Partitions</a><br>
 
