--- a/program/leetcode/c_5.htm
+++ b/program/leetcode/c_5.htm
@@ -50,7 +50,7 @@
 <p>
 參考資訊：<br>
 1. <a href="https://leetcode.com/">leetcode</a><br>
-2. <a href="https://www.cnblogs.com/grandyang">grandyang</a><br><br>
+2. <a href="https://www.cnblogs.com/grandyang/p/4464476.html">grandyang</a><br><br>
 
 題目：<br>
 <img src="c_5/1.jpg" class="maxSize"><br><br>
@@ -62,7 +62,7 @@ void searchPalindrome(const char *s, int l, int r, int *start, int *cnt)
 {
     int len = strlen(s);
 
-    while ((l &gt;= 0) &amp;&amp; (l &lt; len) &amp;&amp; (s[l] == s[r])) {
+    while ((l &gt;= 0) &amp;&amp; (r &lt; len) &amp;&amp; (s[l] == s[r])) {
         l-= 1;
         r+= 1;
     }
