--- a/umpc.htm
+++ b/umpc.htm
@@ -200,6 +200,10 @@ iriver Dicple D88</h3>
 鍵盤FPC</a><br>
 
 &lowast;
+<a href="umpc/d88/lcdpin.htm">
+鍵盤腳位</a><br>
+
+&lowast;
 <a href="umpc/d88/uart.htm">
 焊接UART接頭</a><br>
 
