iriver Dicple D88 Refined.

--- a/umpc/d88/lcdpin.htm
+++ b/umpc/d88/lcdpin.htm
@@ -48,6 +48,9 @@
 <p><b>鍵盤腳位</b></p>
 <hr size="1">
 <p>
+IC腳位<br>
+<img src="lcdpin/4.jpg" class="maxSize"><br><br>
+
 鍵盤腳位<br>
 <img src="lcdpin/1.jpg" class="maxSize"><br><br>
 
