--- a/umpc/d88/lcdpin.htm
+++ b/umpc/d88/lcdpin.htm
@@ -53,12 +53,15 @@ IC腳位<br>
 <img src="lcdpin/5.jpg" class="maxSize"><br><br>
 
 鍵盤腳位<br>
-<img src="lcdpin/1.jpg" class="maxSize">
+<img src="lcdpin/1.jpg" class="maxSize"><br><br>
+
+感謝QQ群友鉗工的協助，STMPE2403的腳位圖應該是Bottom View，而非一般的Top View，因此，腳位需要對調，如下：
 </p>
 <pre>
-ORG: D2 F6 F5 E4 C5 B6 A6 E1 F1 E2 F2 E3 F3 B1 B2 A1 A2 B3
-REV: 4B 6F 6E 5D 3E 2F 1F 5A 6A 2B 6B 5C 6C 2A 2B 1A 1B 2C
-REV: B4 F6 E6 D5 E3 F2 F1 A5 A6 B2 B6 C5 C6 A2 B2 A1 B1 C2
+ORG: D2  F6  F5  E4  C5  B6  A6  E1  F1  E2  F2  E3  F3  B1  B2  A1  A2  B3
+REV: 4B  6F  6E  5D  3E  2F  1F  5A  6A  5B  6B  5C  6C  2A  2B  1A  1B  2C
+REV: B4  F6  E6  D5  E3  F2  F1  A5  A6  B5  B6  C5  C6  A2  B2  A1  B1  C2
+PIN: X7  Y11 Y10 Y9  Y8  X3  X2  X1  X0  Y3  Y2  Y1  Y0  X4  Y4  Y5  Y6  Y7
 </pre><br>
 
 <p>
