--- a/system.htm
+++ b/system.htm
@@ -79,7 +79,7 @@
     <a href="#windows"><img src="img/photos/windows.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Windows"/></a>
     <a href="#docker"><img src="img/photos/docker.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Docker"/></a>
     <a href="#podman"><img src="img/photos/podman.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Podman"/></a>
-    <a href="#kube"><img src="img/photos/kube.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Kubernetes"/></a>
+    <a href="#k8s"><img src="img/photos/k8s.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="K8s"/></a>
     <a href="#k3s"><img src="img/photos/k3s.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="K3s"/></a>
     <a href="#sailfish"><img src="img/photos/sailfish.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Sailfish OS"/></a>
 </p>
@@ -521,24 +521,24 @@ podman.sock</a><br>
 解決沒有podman.socket的問題</a><br>
 <br><br><br><br>
 
-<div id="kube"></div>
-<h3><img src="img/photos/kube.jpg" class="floatLeft"/>
-Kubernetes</h3>
+<div id="k8s"></div>
+<h3><img src="img/photos/k8s.jpg" class="floatLeft"/>
+K8s</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
-<a href="system/kube/cli.htm">
+<a href="system/k8s/cli.htm">
 常見操作指令</a><br>
 
 &lowast;
-<a href="system/kube/install_ubuntu.htm">
+<a href="system/k8s/install_ubuntu.htm">
 如何安裝在Ubuntu系統上(VMware)</a><br>
 
 &oplus;
 <b>Container Escape</b><br>
 
 	&emsp;&emsp;&emsp;&emsp;&lowast;
-	<a href="system/kube/cve-2022-0847.htm">
+	<a href="system/k8s/cve-2022-0847.htm">
 	CVE-2022-0847</a><br>
 <br><br><br><br>
 
