--- a/system/k8s/cli.htm
+++ b/system/k8s/cli.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Kubernetes</h3>
+<h3>K8s</h3>
 <p><b>常見操作指令</b></p>
 <hr size="1">
 <p>
@@ -54,14 +54,14 @@
 如下：
 </p>
 <pre>
-# list pods
+// list pods
 $ sudo kubectl get pod
 
-# remove all of resources
+// remove all of resources
 $ sudo kubectl delete -f xxx.yaml
 $ sudo kubectl delete pods --all
 
-# attach console
+// attach console
 $ kubectl exec --stdin --tty shell-demo -- /bin/bash
 </pre><br>
 
