iriver Dicple D88 Refined.

--- a/umpc/d88/lcdpin.htm
+++ b/umpc/d88/lcdpin.htm
@@ -69,6 +69,9 @@ COMPAT2401: X7  Y11 Y10 Y9  Y8  Y7  Y6  Y5  Y4  Y3  Y2  Y1  Y0  X4  X3  X2  X1  
 STMPE2403腳位<br>
 <img src="lcdpin/2.jpg" class="maxSize"><br><br>
 
+STMPE2401腳位<br>
+<img src="lcdpin/6.jpg" class="maxSize"><br><br>
+
 STMPE2403 GPIO<br>
 <img src="lcdpin/3.jpg" class="maxSize">
 </p>
