iriver Dicple D88 How to replace the old battery.

--- a/umpc.htm
+++ b/umpc.htm
@@ -204,6 +204,10 @@ iriver Dicple D88</h3>
 鍵盤腳位</a><br>
 
 &lowast;
+<a href="umpc/d88/battery.htm">
+更換電池</a><br>
+
+&lowast;
 <a href="umpc/d88/uart.htm">
 焊接UART接頭</a><br>
 
