--- a/umpc.htm
+++ b/umpc.htm
@@ -216,6 +216,10 @@ iriver Dicple D88</h3>
 如何透過USBBoot刷機</a><br>
 
 &lowast;
+<a href="umpc/d88/gserial.htm">
+如何使用usb gadget gserial</a><br>
+
+&lowast;
 <a href="umpc/d88/stmpe2403.htm">
 STMPE2403 GPIO</a><br>
 
