iriver Dicple D88 How to mound mtdblock3 and mtdblock4.

--- a/umpc.htm
+++ b/umpc.htm
@@ -220,6 +220,10 @@ iriver Dicple D88</h3>
 如何使用usb gadget gserial</a><br>
 
 &lowast;
+<a href="umpc/d88/mount_mtd.htm">
+如何掛載mtdblock3、mtdblock4</a><br>
+
+&lowast;
 <a href="umpc/d88/stmpe2403.htm">
 STMPE2403 GPIO</a><br>
 
