iriver Dicple D88 How to build gdb with static link.

--- a/umpc.htm
+++ b/umpc.htm
@@ -232,6 +232,10 @@ STMPE2403 GPIO</a><br>
 NAND Partitions</a><br>
 
 &lowast;
+<a href="umpc/d88/build_gdb.htm">
+build gdb</a><br>
+
+&lowast;
 <a href="umpc/d88/build_uboot.htm">
 build uboot</a><br>
 <br><br><br><br>
