iriver Dicple D88 How to get the key value for brightness.

--- a/umpc.htm
+++ b/umpc.htm
@@ -216,6 +216,10 @@ iriver Dicple D88</h3>
 如何透過USBBoot刷機</a><br>
 
 &lowast;
+<a href="umpc/d88/get_bl.htm">
+如何取得背光按鍵的狀態</a><br>
+
+&lowast;
 <a href="umpc/d88/gserial.htm">
 如何使用usb gadget gserial</a><br>
 
