iriver Dicple D88 How to set backlight.

--- a/umpc.htm
+++ b/umpc.htm
@@ -212,6 +212,10 @@ iriver Dicple D88</h3>
 焊接UART接頭</a><br>
 
 &lowast;
+<a href="umpc/d88/set_bl.htm">
+如何設定背光</a><br>
+
+&lowast;
 <a href="umpc/d88/flash.htm">
 如何透過USBBoot刷機</a><br>
 
