iriver Dicple D88 How to turn backlight off.

--- a/umpc.htm
+++ b/umpc.htm
@@ -216,6 +216,10 @@ iriver Dicple D88</h3>
 如何設定背光</a><br>
 
 &lowast;
+<a href="umpc/d88/set_bl0.htm">
+如何關閉背光</a><br>
+
+&lowast;
 <a href="umpc/d88/flash.htm">
 如何透過USBBoot刷機</a><br>
 
