iriver Dicple D88 How to get the voltage value for battery.

--- a/umpc.htm
+++ b/umpc.htm
@@ -220,6 +220,10 @@ iriver Dicple D88</h3>
 如何關閉背光</a><br>
 
 &lowast;
+<a href="umpc/d88/get_batt.htm">
+如何取得電池的狀態</a><br>
+
+&lowast;
 <a href="umpc/d88/flash.htm">
 如何透過USBBoot刷機</a><br>
 
