iriver Dicple D88 How to build gmenu2x for stock system.

--- a/umpc.htm
+++ b/umpc.htm
@@ -258,6 +258,10 @@ build gdb</a><br>
 &lowast;
 <a href="umpc/d88/build_uboot.htm">
 build uboot</a><br>
+
+&lowast;
+<a href="umpc/d88/build_gmenu2x.htm">
+build gmenu2x</a><br>
 <br><br><br><br>
 
 <div id="c700"></div>
