--- a/umpc.htm
+++ b/umpc.htm
@@ -262,6 +262,13 @@ build uboot</a><br>
 &lowast;
 <a href="umpc/d88/build_gmenu2x.htm">
 build gmenu2x</a><br>
+
+&oplus;
+<b>RetroFW</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="umpc/d88/build_gmenunx.htm">
+    build gmenunx</a><br>
 <br><br><br><br>
 
 <div id="c700"></div>
