--- a/umpc.htm
+++ b/umpc.htm
@@ -263,6 +263,10 @@ build uboot</a><br>
 <a href="umpc/d88/build_gmenu2x.htm">
 build gmenu2x</a><br>
 
+&lowast;
+<a href="umpc/d88/build_mkyaffs2image.htm">
+build mkyaffs2image</a><br>
+
 &oplus;
 <b>RetroFW</b><br>
 
