iriver Dicple D88 How to repack rootfs.yaffs2.

--- a/umpc.htm
+++ b/umpc.htm
@@ -236,6 +236,10 @@ iriver Dicple D88</h3>
 如何取得背光按鍵的狀態</a><br>
 
 &lowast;
+<a href="umpc/d88/repack_yaffs2.htm">
+如何打包rootfs.yaffs2</a><br>
+
+&lowast;
 <a href="umpc/d88/gserial.htm">
 如何使用usb gadget gserial</a><br>
 
