iriver Dicple D88 How to extract yaffs2 file.

--- a/umpc.htm
+++ b/umpc.htm
@@ -224,6 +224,10 @@ iriver Dicple D88</h3>
 如何取得電池的狀態</a><br>
 
 &lowast;
+<a href="umpc/d88/extract_yaffs2.htm">
+如何解開yaffs2檔案</a><br>
+
+&lowast;
 <a href="umpc/d88/flash.htm">
 如何透過USBBoot刷機</a><br>
 
