D88 How to restore stock system.

--- a/umpc.htm
+++ b/umpc.htm
@@ -276,6 +276,13 @@ build gmenu2x</a><br>
 build mkyaffs2image</a><br>
 
 &oplus;
+<b>Stock</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="umpc/d88/stock_setup.htm">
+    安裝系統</a><br>
+
+&oplus;
 <b>RetroFW</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
