D88 How to install dualboot menu.

--- a/umpc.htm
+++ b/umpc.htm
@@ -282,6 +282,10 @@ build mkyaffs2image</a><br>
     <a href="umpc/d88/stock_setup.htm">
     安裝系統</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="umpc/d88/stock_dual.htm">
+    安裝雙系統選單</a><br>
+
 &oplus;
 <b>RetroFW</b><br>
 
