D88 How to install retrofw system.

--- a/umpc.htm
+++ b/umpc.htm
@@ -290,6 +290,10 @@ build mkyaffs2image</a><br>
 <b>RetroFW</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="umpc/d88/retrofw_setup.htm">
+    安裝系統</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="umpc/d88/build_gmenunx.htm">
     build gmenunx</a><br>
 <br><br><br><br>
