--- a/umpc.htm
+++ b/umpc.htm
@@ -286,6 +286,10 @@ build mkyaffs2image</a><br>
     <a href="umpc/d88/stock_dual.htm">
     安裝雙系統選單</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="umpc/d88/stock_debug.htm">
+    如何透過USB UART Debug</a><br>
+
 &oplus;
 <b>RetroFW</b><br>
 
