D88 How to debug via usb uart.

--- a/umpc.htm
+++ b/umpc.htm
@@ -298,6 +298,10 @@ build mkyaffs2image</a><br>
     安裝系統</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="umpc/d88/retrofw_debug.htm">
+    如何透過USB UART Debug</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="umpc/d88/build_gmenunx.htm">
     build gmenunx</a><br>
 <br><br><br><br>
