D88 Added keymap image.

--- a/umpc.htm
+++ b/umpc.htm
@@ -208,6 +208,10 @@ iriver Dicple D88</h3>
 更換電池</a><br>
 
 &lowast;
+<a href="umpc/d88/keymap.htm">
+鍵盤按鍵對應</a><br>
+
+&lowast;
 <a href="umpc/d88/uart.htm">
 焊接UART接頭</a><br>
 
