D88 Added a SDL example for keybaord testing.

--- a/umpc.htm
+++ b/umpc.htm
@@ -308,6 +308,14 @@ build mkyaffs2image</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="umpc/d88/build_gmenunx.htm">
     build gmenunx</a><br>
+    
+&oplus;
+<b>C/C++</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="umpc/d88/cpp_kbd.htm">
+    Keyboard</a><br>
+
 <br><br><br><br>
 
 <div id="c700"></div>
