--- a/umpc.htm
+++ b/umpc.htm
@@ -283,6 +283,10 @@ build mkyaffs2image</a><br>
 <b>Stock</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="umpc/d88/stock_kallsym.htm">
+    /proc/kallsym</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="umpc/d88/stock_setup.htm">
     安裝系統</a><br>
 
