--- a/umpc.htm
+++ b/umpc.htm
@@ -216,6 +216,10 @@ iriver Dicple D88</h3>
 焊接UART接頭</a><br>
 
 &lowast;
+<a href="umpc/d88/keygpio.htm">
+鍵盤和GPIO對應表</a><br>
+
+&lowast;
 <a href="umpc/d88/set_bl.htm">
 如何設定背光</a><br>
 
