D88 Fix 'openpty failed: No such file or directory' issue.

--- a/umpc.htm
+++ b/umpc.htm
@@ -260,6 +260,10 @@ iriver Dicple D88</h3>
 如何掛載mtdblock3、mtdblock4</a><br>
 
 &lowast;
+<a href="umpc/d88/fix_openpty.htm">
+解決"openpty failed: No such file or directory"問題</a><br>
+
+&lowast;
 <a href="umpc/d88/stmpe2403.htm">
 STMPE2403 GPIO</a><br>
 
