--- a/umpc/d88/fat.htm
+++ b/umpc/d88/fat.htm
@@ -48,6 +48,9 @@
 <p><b>如何全部都使用大寫開啟fat磁區的檔案</b></p>
 <hr size="1">
 <p>
+參考資訊：<br>
+1. <a href="https://www.kernel.org/doc/Documentation/filesystems/vfat.txt">vfat</a><br><br>
+
 開啟檔案的方式只能使用小寫
 </p>
 <pre>
