--- a/umpc.htm
+++ b/umpc.htm
@@ -257,7 +257,7 @@ iriver Dicple D88</h3>
 
 &lowast;
 <a href="umpc/d88/mount_mtd.htm">
-如何掛載mtdblock3、mtdblock4</a><br>
+如何使用usb gadget file storage</a><br>
 
 &lowast;
 <a href="umpc/d88/fat.htm">
