--- a/umpc/d88/mount_mtd.htm
+++ b/umpc/d88/mount_mtd.htm
@@ -45,17 +45,17 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>iriver Dicple D88</h3>
-<p><b>如何掛載mtdblock3、mtdblock4</b></p>
+<p><b>如何使用usb gadget file storage</b></p>
 <hr size="1">
 <p>
 如下：
 </p>
 <pre>
-#!/bin/sh
-sync
-umount -f /mnt/mtdblock3
-/sbin/insmod /lib/modules/jz4740_udc.ko
-/sbin/insmod /lib/modules/g_file_storage.ko luns=2 file=/dev/mtdblock3,/dev/mtdblock4
+# sync
+# umount -f /mnt/mtdblock3
+# umount -f /mnt/mtdblock4
+# /sbin/insmod /lib/modules/jz4740_udc.ko
+# /sbin/insmod /lib/modules/g_file_storage.ko luns=2 file=/dev/mtdblock3,/dev/mtdblock4
 </pre>
 <p>
 P.S. luns代表掛載數量
