--- a/system.htm
+++ b/system.htm
@@ -482,6 +482,10 @@ docker.sock</a><br>
 如何啟一個有root權限的container</a><br>
 
 &lowast;
+<a href="system/docker/fix_it.htm">
+解決"the input device is not a TTY"問題</a><br>
+
+&lowast;
 <a href="system/docker/fix_iptables.htm">
 解決"Error initializing network controller"問題</a><br>
 
