--- a/umpc/d88/keygpio.htm
+++ b/umpc/d88/keygpio.htm
@@ -51,66 +51,66 @@
 鍵盤和GPIO的對應如下：
 </p>
 <table>
-<tr><th>ESC</th><td>GPIO-9, GPIO-13</td><td>KP_Y1, KP_Y5</td></tr>
-<tr><th>目錄</th><td>GPIO-10, GPIO-13</td><td>KP_Y2, KP_Y5</td></tr>
-<tr><th>多詞典查詢</th><td>GPIO-0, GPIO-13</td><td>KP_X0, KP_Y5</td></tr>
-<tr><th>漢語</th><td>GPIO-1, GPIO-13</td><td>KP_X1, KP_Y5</td></tr>
-<tr><th>英漢</th><td>GPIO-8, GPIO-13</td><td>KP_Y0, KP_Y5</td></tr>
-<tr><th>英英</th><td>GPIO-11, GPIO-13</td><td>KP_Y3, KP_Y5</td></tr>
-<tr><th>韓漢</th><td>GPIO-2, GPIO-13</td><td>KP_X2, KP_Y5</td></tr>
-<tr><th>整句翻譯</th><td>GPIO-3, GPIO-13</td><td>KP_X3, KP_Y5</td></tr>
-<tr><th>MP3.FM</th><td>GPIO-13, GPIO-17</td><td>KP_Y5, KP_Y8</td></tr>
-<tr><th>Pg Up</th><td>GPIO-13, GPIO-19</td><td>KP_Y5, KP_Y10</td></tr>
-<tr><th>Pg Dn</th><td>GPIO-7, GPIO-13</td><td>KP_X7, KP_Y5</td></tr>
-<tr><th>BACKSPACE</th><td>GPIO-7, GPIO-16</td><td>KP_X7, KP_Y7</td></tr>
+<tr><th>ESC</th>       <td>GPIO-13, GPIO-09</td></tr>
+<tr><th>目錄</th>      <td>GPIO-13, GPIO-10</td></tr>
+<tr><th>多詞典查詢</th><td>GPIO-13, GPIO-00</td></tr>
+<tr><th>漢語</th>      <td>GPIO-13, GPIO-01</td></tr>
+<tr><th>英漢</th>      <td>GPIO-13, GPIO-08</td></tr>
+<tr><th>英英</th>      <td>GPIO-13, GPIO-11</td></tr>
+<tr><th>韓漢</th>      <td>GPIO-13, GPIO-02</td></tr>
+<tr><th>整句翻譯</th>  <td>GPIO-13, GPIO-03</td></tr>
+<tr><th>MP3.FM</th>    <td>GPIO-13, GPIO-17</td></tr>
+<tr><th>Pg Up</th>     <td>GPIO-13, GPIO-19</td></tr>
+<tr><th>Pg Dn</th>     <td>GPIO-13, GPIO-07</td></tr>
+<tr><th>BACKSPACE</th> <td>GPIO-16, GPIO-07</td></tr>
 
-<tr><th>Q</th><td>GPIO-9, GPIO-16</td><td>KP_Y1, KP_Y7</td></tr>
-<tr><th>W</th><td>GPIO-10, GPIO-16</td><td>KP_Y2, KP_Y7</td></tr>
-<tr><th>E</th><td>GPIO-0, GPIO-16</td><td>KP_X0, KP_Y7</td></tr>
-<tr><th>R</th><td>GPIO-1, GPIO-16</td><td>KP_X1, KP_Y7</td></tr>
-<tr><th>T</th><td>GPIO-8, GPIO-16</td><td>KP_Y0, KP_Y7</td></tr>
-<tr><th>Y</th><td>GPIO-11, GPIO-16</td><td>KP_Y3, KP_Y7</td></tr>
-<tr><th>U</th><td>GPIO-2, GPIO-16</td><td>KP_X2, KP_Y7</td></tr>
-<tr><th>I</th><td>GPIO-16, GPIO-18</td><td>KP_Y7, KP_Y9</td></tr>
-<tr><th>O</th><td>GPIO-3, GPIO-16</td><td>KP_X3, KP_Y7</td></tr>
-<tr><th>P</th><td>GPIO-16, GPIO-17</td><td>KP_Y7, KP_Y8</td></tr>
-<tr><th>NUM</th><td>GPIO-16, GPIO-19</td><td>KP_Y7, KP_Y10</td></tr>
+<tr><th>Q</th>         <td>GPIO-16, GPIO-09</td></tr>
+<tr><th>W</th>         <td>GPIO-16, GPIO-10</td></tr>
+<tr><th>E</th>         <td>GPIO-16, GPIO-00</td></tr>
+<tr><th>R</th>         <td>GPIO-16, GPIO-01</td></tr>
+<tr><th>T</th>         <td>GPIO-16, GPIO-08</td></tr>
+<tr><th>Y</th>         <td>GPIO-16, GPIO-11</td></tr>
+<tr><th>U</th>         <td>GPIO-16, GPIO-02</td></tr>
+<tr><th>I</th>         <td>GPIO-16, GPIO-18</td></tr>
+<tr><th>O</th>         <td>GPIO-16, GPIO-03</td></tr>
+<tr><th>P</th>         <td>GPIO-16, GPIO-17</td></tr>
+<tr><th>NUM</th>       <td>GPIO-16, GPIO-19</td></tr>
 
-<tr><th>...</th><td>GPIO-9, GPIO-12</td><td>KP_Y1, KP_Y4</td></tr>
-<tr><th>A</th><td>GPIO-9, GPIO-14</td><td>KP_Y1, KP_Y6</td></tr>
-<tr><th>S</th><td>GPIO-10, GPIO-14</td><td>KP_Y2, KP_Y6</td></tr>
-<tr><th>D</th><td>GPIO-0, GPIO-14</td><td>KP_X0, KP_Y6</td></tr>
-<tr><th>F</th><td>GPIO-1, GPIO-14</td><td>KP_X1, KP_Y6</td></tr>
-<tr><th>G</th><td>GPIO-8, GPIO-14</td><td>KP_Y0, KP_Y6</td></tr>
-<tr><th>H</th><td>GPIO-11, GPIO-14</td><td>KP_Y3, KP_Y6</td></tr>
-<tr><th>J</th><td>GPIO-2, GPIO-14</td><td>KP_X2, KP_Y6</td></tr>
-<tr><th>K</th><td>GPIO-14, GPIO-18</td><td>KP_Y6, KP_Y9</td></tr>
-<tr><th>L</th><td>GPIO-3, GPIO-14</td><td>KP_X3, KP_Y6</td></tr>
-<tr><th>Enter</th><td>GPIO-7, GPIO-14</td><td>KP_X7, KP_Y6</td></tr>
+<tr><th>...</th>       <td>GPIO-12, GPIO-09</td></tr>
+<tr><th>A</th>         <td>GPIO-14, GPIO-09</td></tr>
+<tr><th>S</th>         <td>GPIO-14, GPIO-10</td></tr>
+<tr><th>D</th>         <td>GPIO-14, GPIO-00</td></tr>
+<tr><th>F</th>         <td>GPIO-14, GPIO-01</td></tr>
+<tr><th>G</th>         <td>GPIO-14, GPIO-08</td></tr>
+<tr><th>H</th>         <td>GPIO-14, GPIO-11</td></tr>
+<tr><th>J</th>         <td>GPIO-14, GPIO-02</td></tr>
+<tr><th>K</th>         <td>GPIO-14, GPIO-18</td></tr>
+<tr><th>L</th>         <td>GPIO-14, GPIO-03</td></tr>
+<tr><th>Enter</th>     <td>GPIO-14, GPIO-07</td></tr>
 
-<tr><th>LSHIFT</th><td>GPIO-14, GPIO-20</td><td>KP_Y6, KP_Y11</td></tr>
-<tr><th>Z</th><td>GPIO-10, GPIO-12</td><td>KP_Y2, KP_Y4</td></tr>
-<tr><th>X</th><td>GPIO-0, GPIO-12</td><td>KP_X0, KP_Y4</td></tr>
-<tr><th>C</th><td>GPIO-1, GPIO-12</td><td>KP_X1, KP_Y4</td></tr>
-<tr><th>V</th><td>GPIO-8, GPIO-12</td><td>KP_Y0, KP_Y4</td></tr>
-<tr><th>B</th><td>GPIO-11, GPIO-12</td><td>KP_Y3, KP_Y4</td></tr>
-<tr><th>N</th><td>GPIO-2, GPIO-12</td><td>KP_X2, KP_Y4</td></tr>
-<tr><th>M</th><td>GPIO-12, GPIO-18</td><td>KP_Y4, KP_Y9</td></tr>
-<tr><th>跳查</th><td>GPIO-4, GPIO-11</td><td>KP_X4, KP_Y3</td></tr>
-<tr><th>UP</th><td>GPIO-12, GPIO-19</td><td>KP_Y4, KP_Y10</td></tr>
-<tr><th>RSHIFT</th><td>GPIO-12, GPIO-20</td><td>KP_Y4, KP_Y11</td></tr>
+<tr><th>LSHIFT</th>    <td>GPIO-14, GPIO-20</td></tr>
+<tr><th>Z</th>         <td>GPIO-12, GPIO-10</td></tr>
+<tr><th>X</th>         <td>GPIO-12, GPIO-00</td></tr>
+<tr><th>C</th>         <td>GPIO-12, GPIO-01</td></tr>
+<tr><th>V</th>         <td>GPIO-12, GPIO-08</td></tr>
+<tr><th>B</th>         <td>GPIO-12, GPIO-11</td></tr>
+<tr><th>N</th>         <td>GPIO-12, GPIO-02</td></tr>
+<tr><th>M</th>         <td>GPIO-12, GPIO-18</td></tr>
+<tr><th>跳查</th>      <td>GPIO-11, GPIO-04</td></tr>
+<tr><th>UP</th>        <td>GPIO-12, GPIO-19</td></tr>
+<tr><th>RSHIFT</th>    <td>GPIO-12, GPIO-20</td></tr>
 
-<tr><th>發音設置</th><td>GPIO-4, GPIO-9</td><td>KP_X4, KP_Y1</td></tr>
-<tr><th>例/解</th><td>GPIO-4, GPIO-10</td><td>KP_X4, KP_Y2</td></tr>
-<tr><th>添加</th><td>GPIO-1, GPIO-4</td><td>KP_X1, KP_X4</td></tr>
-<tr><th>單詞複習</th><td>GPIO-4, GPIO-8</td><td>KP_X4, KP_Y0</td></tr>
-<tr><th>格式變換</th><td>GPIO-7, GPIO-12</td><td>KP_X7, KP_Y4</td></tr>
-<tr><th>空格</th><td>GPIO-2, GPIO-4</td><td>KP_X2, KP_X4</td></tr>
-<tr><th>輸入法</th><td>GPIO-4, GPIO-18</td><td>KP_X4, KP_Y9</td></tr>
-<tr><th>速查</th><td>GPIO-3, GPIO-4</td><td>KP_X3, KP_X4</td></tr>
-<tr><th>LEFT</th><td>GPIO-4, GPIO-17</td><td>KP_X4, KP_Y8</td></tr>
-<tr><th>DOWN</th><td>GPIO-4, GPIO-19</td><td>KP_X4, KP_Y10</td></tr>
-<tr><th>RIGHT</th><td>GPIO-4, GPIO-7</td><td>KP_X4, KP_X7</td></tr>
+<tr><th>發音設置</th>  <td>GPIO-09, GPIO-04</td></tr>
+<tr><th>例/解</th>     <td>GPIO-10, GPIO-04</td></tr>
+<tr><th>添加</th>      <td>GPIO-04, GPIO-01</td></tr>
+<tr><th>單詞複習</th>  <td>GPIO-08, GPIO-04</td></tr>
+<tr><th>格式變換</th>  <td>GPIO-12, GPIO-07</td></tr>
+<tr><th>空格</th>      <td>GPIO-04, GPIO-02</td></tr>
+<tr><th>輸入法</th>    <td>GPIO-04, GPIO-18</td></tr>
+<tr><th>速查</th>      <td>GPIO-04, GPIO-03</td></tr>
+<tr><th>LEFT</th>      <td>GPIO-04, GPIO-17</td></tr>
+<tr><th>DOWN</th>      <td>GPIO-04, GPIO-19</td></tr>
+<tr><th>RIGHT</th>     <td>GPIO-04, GPIO-07</td></tr>
 </table><br>
 
 <p>
