D88 How to reverse kernel.

--- a/umpc.htm
+++ b/umpc.htm
@@ -276,6 +276,10 @@ RTC取得、設定</a><br>
 repack kernel</a><br>
 
 &lowast;
+<a href="umpc/d88/reverse.htm">
+reverse kernel</a><br>
+
+&lowast;
 <a href="umpc/d88/stmpe2403.htm">
 STMPE2403 GPIO</a><br>
 
