--- a/umpc/d88/keygpio.htm
+++ b/umpc/d88/keygpio.htm
@@ -114,6 +114,11 @@
 </table><br>
 
 <p>
+感謝鉗工幫忙整理的表格<br>
+<img src="keygpio/1.jpg" class="maxSize">
+</p>
+
+<p>
 <br><a href="../../umpc.htm">返回上一頁</a>
 </p>
 
