D88 How to patch kernel.

--- a/umpc.htm
+++ b/umpc.htm
@@ -272,6 +272,10 @@ RTC取得、設定</a><br>
 解決"openpty failed: No such file or directory"問題</a><br>
 
 &lowast;
+<a href="umpc/d88/patch.htm">
+patch kernel</a><br>
+
+&lowast;
 <a href="umpc/d88/repack.htm">
 repack kernel</a><br>
 
