D5 Added teardown images.

--- a/umpc.htm
+++ b/umpc.htm
@@ -74,6 +74,7 @@
 <div id="page">
 <br><br>
 <p>
+    <a href="#d5"><img src="img/photos/d5.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="iriver Dicple D5"/></a>
     <a href="#d88"><img src="img/photos/d88.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="iriver Dicple D88"/></a>
     <a href="#c700"><img src="img/photos/c700.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zaurus SL-C700"/></a>
     <a href="#c750"><img src="img/photos/c750.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zaurus SL-C750"/></a>
@@ -182,6 +183,16 @@
 <div id="page">
 <br><br>
 <p>
+<div id="d5"></div>
+<h3><img src="img/photos/d5.jpg" class="floatLeft"/>
+iriver Dicple D5</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/d5/teardown.htm">
+拆機</a><br>
+<br><br><br><br>
+
 <div id="d88"></div>
 <h3><img src="img/photos/d88.jpg" class="floatLeft"/>
 iriver Dicple D88</h3>
@@ -341,6 +352,13 @@ build mkyaffs2image</a><br>
     <a href="umpc/d88/build_gmenunx.htm">
     build gmenunx</a><br>
     
+&oplus;
+<b>Debian</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="umpc/d88/debian_setup.htm">
+    安裝系統</a><br>
+
 &oplus;
 <b>C/C++</b><br>
 
