D5 Added review page.

--- a/umpc.htm
+++ b/umpc.htm
@@ -189,6 +189,10 @@ iriver Dicple D5</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
+<a href="umpc/d5/review.htm">
+介紹</a><br>
+
+&lowast;
 <a href="umpc/d5/teardown.htm">
 拆機</a><br>
 <br><br><br><br>
