Z900 How to debug via jtag.

--- a/umpc.htm
+++ b/umpc.htm
@@ -1348,6 +1348,10 @@ Canon wordtank Z900</h3>
 &lowast;
 <a href="umpc/z900/ballmap.htm">
 i.MX283 Ball Map</a><br>
+
+&lowast;
+<a href="umpc/z900/jtag.htm">
+如何使用JATG Debug</a><br>
 <br><br><br><br>
 
 <div id="fx-39"></div>
