Z900 How to debug program via ida pro.

--- a/umpc.htm
+++ b/umpc.htm
@@ -1352,6 +1352,10 @@ i.MX283 Ball Map</a><br>
 &lowast;
 <a href="umpc/z900/jtag.htm">
 如何使用JATG Debug</a><br>
+
+&lowast;
+<a href="umpc/z900/ida_pro.htm">
+如何使用IDA Pro Debug</a><br>
 <br><br><br><br>
 
 <div id="fx-39"></div>
