D5 Solder JTAG socket.

--- a/umpc.htm
+++ b/umpc.htm
@@ -195,6 +195,10 @@ iriver Dicple D5</h3>
 &lowast;
 <a href="umpc/d5/teardown.htm">
 拆機</a><br>
+
+&lowast;
+<a href="umpc/d5/jtag.htm">
+焊接JATG腳位</a><br>
 <br><br><br><br>
 
 <div id="d88"></div>
