--- a/umpc/z900/ida_pro.htm
+++ b/umpc/z900/ida_pro.htm
@@ -52,10 +52,10 @@
 1. <a href="https://www.segger.com/downloads/jlink/">jlink</a><br>
 2. <a href="https://docs.platformio.org/en/stable/plus/debug-tools/jlink.html">pinout</a><br><br>
 
-JATG腳位<br>
+JTAG腳位<br>
 <img src="jtag/1.jpg" class="maxSize"><br><br>
 
-1. 將Z900連接到JATG<br>
+1. 將Z900連接到JTAG<br>
 <img src="jtag/2.jpg" class="maxSize"><br>
 2. 安裝<a href="https://www.segger.com/downloads/jlink/JLink_Linux_x86_64.deb">JLink_Linux_x86_64.deb</a><br>
 3. Z900上電<br>
