--- a/umpc/z900/jtag.htm
+++ b/umpc/z900/jtag.htm
@@ -45,17 +45,17 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Canon wordtank Z900</h3>
-<p><b>如何使用JATG Debug</b></p>
+<p><b>如何使用JTAG Debug</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
 1. <a href="https://www.segger.com/downloads/jlink/">jlink</a><br>
 2. <a href="https://docs.platformio.org/en/stable/plus/debug-tools/jlink.html">pinout</a><br><br>
 
-JATG腳位<br>
+JTAG腳位<br>
 <img src="jtag/1.jpg" class="maxSize"><br><br>
 
-1. 將Z900連接到JATG<br>
+1. 將Z900連接到JTAG<br>
 <img src="jtag/2.jpg" class="maxSize"><br>
 2. 安裝<a href="https://www.segger.com/downloads/jlink/JLink_Linux_x86_64.deb">JLink_Linux_x86_64.deb</a><br>
 3. Z900上電<br>
