D5 How to dump ram via jtag.

--- a/umpc/d5/dump.htm
+++ b/umpc/d5/dump.htm
@@ -45,17 +45,35 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>iriver Dicple D5</h3>
-<p><b>焊接JTAG腳位</b></p>
+<p><b>如何透過JTAG Dump記憶體</b></p>
 <hr size="1">
 <p>
-JTAG位置<br>
-<img src="jtag/1.jpg" class="maxSize"><br><br>
+D5腳位<br>
+<img src="jtag/3.jpg" class="maxSize"><br><br>
 
-跳線<br>
-<img src="jtag/2.jpg" class="maxSize"><br><br>
+JTAG腳位<br>
+<img src="dump/1.jpg" class="maxSize"><br><br>
 
-完美的位置<br>
-<img src="jtag/3.jpg" class="maxSize">
+連接JTAG<br>
+<img src="dump/2.jpg" class="maxSize"><br><br>
+
+選擇ARM9<br>
+<img src="dump/3.jpg" class="maxSize"><br><br>
+
+選擇JTAG<br>
+<img src="dump/4.jpg" class="maxSize"><br><br>
+
+D5進入桌面後，透過JTAG Command可以知道記憶體的位置是從0x08000000開始<br>
+<img src="dump/5.jpg" class="maxSize"><br><br>
+
+0x08000000<br>
+<img src="dump/6.jpg" class="maxSize"><br><br>
+
+dump<br>
+<img src="dump/7.jpg" class="maxSize"><br><br>
+
+果然是ARM9的中斷表<br>
+<img src="dump/8.jpg" class="maxSize">
 </p>
 
 <p>
