--- a/umpc.htm
+++ b/umpc.htm
@@ -319,6 +319,10 @@ build gdb</a><br>
 build uboot</a><br>
 
 &lowast;
+<a href="umpc/d88/build_kernel-2.6.24.htm">
+build kernel 2.6.24</a><br>
+
+&lowast;
 <a href="umpc/d88/build_gmenu2x.htm">
 build gmenu2x</a><br>
 
