--- a/umpc.htm
+++ b/umpc.htm
@@ -323,6 +323,10 @@ build uboot</a><br>
 build kernel 2.6.24</a><br>
 
 &lowast;
+<a href="umpc/d88/build_kernel-2.6.31.htm">
+build kernel 2.6.31</a><br>
+
+&lowast;
 <a href="umpc/d88/build_gmenu2x.htm">
 build gmenu2x</a><br>
 
