--- a/umpc/d88/patch.htm
+++ b/umpc/d88/patch.htm
@@ -45,7 +45,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>iriver Dicple D88</h3>
-<p><b>patch kernel</b></p>
+<p><b>patch kernel (d8key_init)</b></p>
 <hr size="1">
 <p>
 unpack uImage
