D88 How to patch jz_ts_init().

--- a/umpc.htm
+++ b/umpc.htm
@@ -291,16 +291,20 @@ RTC取得、設定</a><br>
 解決"openpty failed: No such file or directory"問題</a><br>
 
 &lowast;
-<a href="umpc/d88/patch.htm">
-patch kernel</a><br>
-
-&lowast;
 <a href="umpc/d88/repack.htm">
 repack kernel</a><br>
 
 &lowast;
 <a href="umpc/d88/reverse.htm">
 reverse kernel</a><br>
+
+&lowast;
+<a href="umpc/d88/patch.htm">
+patch kernel (d8key_init)</a><br>
+
+&lowast;
+<a href="umpc/d88/patch2.htm">
+patch kernel (jz_ts_init)</a><br>
 
 &lowast;
 <a href="umpc/d88/stmpe2403.htm">
