D5 Added memory map image.

--- a/umpc.htm
+++ b/umpc.htm
@@ -198,7 +198,11 @@ iriver Dicple D5</h3>
 
 &lowast;
 <a href="umpc/d5/jtag.htm">
-焊接JATG腳位</a><br>
+焊接JTAG腳位</a><br>
+
+&lowast;
+<a href="umpc/d5/mmap.htm">
+Memory Map</a><br>
 <br><br><br><br>
 
 <div id="d88"></div>
@@ -1367,7 +1371,7 @@ i.MX283 Ball Map</a><br>
 
 &lowast;
 <a href="umpc/z900/jtag.htm">
-如何使用JATG Debug</a><br>
+如何使用JTAG Debug</a><br>
 
 &lowast;
 <a href="umpc/z900/ida_pro.htm">
