--- a/handheld/fc3000/jtag.htm
+++ b/handheld/fc3000/jtag.htm
@@ -57,7 +57,7 @@
 跳線<br>
 <img src="jtag/2.jpg" class="maxSize"><br><br>
 
-接著，請先拔掉JTAG的USB電源，然後，讓F1C100S進入燒錄模式，接著連接JATG USB電源<br>
+接著，請先拔掉JTAG的USB電源，然後，讓F1C100S進入燒錄模式，接著連接JTAG USB電源<br>
 <img src="jtag/3.jpg" class="maxSize"><br><br>
 
 完成<br>
