D5 How to dump memory via jtag.

--- a/umpc.htm
+++ b/umpc.htm
@@ -201,6 +201,10 @@ iriver Dicple D5</h3>
 焊接JTAG腳位</a><br>
 
 &lowast;
+<a href="umpc/d5/dump.htm">
+如何透過JTAG Dump</a><br>
+
+&lowast;
 <a href="umpc/d5/mmap.htm">
 Memory Map</a><br>
 <br><br><br><br>
@@ -1372,6 +1376,10 @@ i.MX283 Ball Map</a><br>
 &lowast;
 <a href="umpc/z900/jtag.htm">
 如何使用JTAG Debug</a><br>
+
+&lowast;
+<a href="umpc/z900/jtag.htm">
+如何透過JTAG Dump</a><br>
 
 &lowast;
 <a href="umpc/z900/ida_pro.htm">
