D5 How to debug program via IDA Pro.

--- a/umpc.htm
+++ b/umpc.htm
@@ -205,6 +205,10 @@ iriver Dicple D5</h3>
 如何透過JTAG Dump</a><br>
 
 &lowast;
+<a href="umpc/d5/ida_pro.htm">
+如何使用IDA Pro Debug</a><br>
+
+&lowast;
 <a href="umpc/d5/mmap.htm">
 Memory Map</a><br>
 <br><br><br><br>
