Gaviar How to port tina-linux bootloader.

--- a/handheld.htm
+++ b/handheld.htm
@@ -887,6 +887,10 @@ gen_checksum.py</a><br>
 關於8080屏、i80屏、MCU屏</a><br>
 
 &lowast;
+<a href="handheld/gaviar/port_tina_boot.htm">
+移植tina-linux bootloader</a><br>
+
+&lowast;
 <a href="handheld/gaviar/build_tina-linux.htm">
 build tina-linux</a><br>
 
