--- a/handheld/gaviar/build_tina-linux.htm
+++ b/handheld/gaviar/build_tina-linux.htm
@@ -80,9 +80,10 @@ $ pack
     /home/steward/Data/tina-linux_sdk/out/d1s-nezha/tina_d1s-nezha_uart4.img
 
     pack finish
-</pre><br>
-
+</pre>
 <p>
+P.S. 編譯後的合成Boot Loader位於：out/d1s-nezha/image/boot0_sdcard.fex<br><br>
+
 燒錄步驟：<br>
 1. 下載<a href="https://github.com/steward-fu/archives/releases/download/f133/PhoenixCardv4.2.7.7z">PhoenixCardv4.2.7.7z</a>並且解壓縮<br>
 2. 執行PhoenixCard.exe<br>
