--- a/handheld/gaviar/build_tina-linux.htm
+++ b/handheld/gaviar/build_tina-linux.htm
@@ -80,10 +80,23 @@ $ pack
     /home/steward/Data/tina-linux_sdk/out/d1s-nezha/tina_d1s-nezha_uart4.img
 
     pack finish
-</pre>
-<p>
-P.S. 編譯後的合成Boot Loader位於：out/d1s-nezha/image/boot0_sdcard.fex<br><br>
+</pre><br>
 
+<p>
+BOOT0 位於：out/d1s-nezha/image/boot0_sdcard.fex (8KB 偏移位置)
+</p>
+<pre>
+$ sudo dd if=out/d1s-nezha/image/boot0_sdcard.fex of=/dev/sdX bs=1024 seek=8
+</pre><br>
+
+<p>
+OpenSBI、U-Boot 位於：out/d1s-nezha/image/boot_package.fex
+</p>
+<pre>
+$ sudo dd if=out/d1s-nezha/image/boot_package.fex of=/dev/sdX bs=1024 seek=16400
+</pre><br>
+
+<p>
 燒錄步驟：<br>
 1. 下載<a href="https://github.com/steward-fu/archives/releases/download/f133/PhoenixCardv4.2.7.7z">PhoenixCardv4.2.7.7z</a>並且解壓縮<br>
 2. 執行PhoenixCard.exe<br>
