--- a/handheld.htm
+++ b/handheld.htm
@@ -895,6 +895,10 @@ gen_checksum.py</a><br>
 build tina-linux</a><br>
 
 &lowast;
+<a href="handheld/gaviar/build_xuantie.htm">
+build xuantie-gnu-toolchain</a><br>
+
+&lowast;
 <a href="handheld/gaviar/mio.htm">
 GPIO Multiplex Function</a><br>
 
