K3S How to enable audit event on k3s-server.

--- a/system.htm
+++ b/system.htm
@@ -558,6 +558,10 @@ K3s</h3>
 &lowast;
 <a href="system/k3s/cli.htm">
 常見操作指令</a><br>
+
+&lowast;
+<a href="system/k3s/audit.htm">
+enable audit event</a><br>
 <br><br><br><br>
 
 <div id="sailfish"></div>
