Golang Fix io/fs issue.

--- a/program.htm
+++ b/program.htm
@@ -1900,6 +1900,10 @@ Golang</h3>
 &lowast;
 <a href="program/golang/hello.htm">
 Hello, world!</a><br>
+
+&lowast;
+<a href="program/golang/fix_ver.htm">
+解決"cannot load io/fs: malformed module path io/fs"問題</a><br>
 <br><br><br><br>
 
 <div id="python"></div>
