--- a/program/golang/fix_ver.htm
+++ b/program/golang/fix_ver.htm
@@ -49,17 +49,26 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://github.com/DefectDojo/godojo/issues/31">issue</a><br><br>
+1. <a href="https://github.com/DefectDojo/godojo/issues/31">issue</a><br>
+2. <a href="https://go.dev/doc/install">install</a><br><br>
 
-問題：
+問題如下：
 </p>
 <pre>
 build github.com/falcosecurity/plugins/plugins/k8saudit/plugin: cannot load io/fs: malformed module path "io/fs": missing dot in first path element
 make: *** [Makefile:46: libk8saudit.so] Error 1
-</pre>
+</pre><br>
+
 <p>
-解法：安裝1.16版本以上的golang
+解法如下(安裝1.16版本以上的golang)：
 </p>
+<pre>
+$ cd
+$ wget https://go.dev/dl/go1.21.0.linux-amd64.tar.gz
+$ sudo rm -rf /usr/local/go
+$ sudo tar -C /usr/local -xzf go1.21.0.linux-amd64.tar.gz
+$ export PATH=/usr/local/go/bin:$PATH
+</pre><br>
 
 <p>
 <br><a href="../../program.htm">返回上一頁</a>
