Debian How to find out client ip address in VirtualBox.

--- a/system.htm
+++ b/system.htm
@@ -258,6 +258,10 @@ VirtualBox產生vboxnet0 192.168.56.1</a><br>
 如何關閉開機顯示的命令列Cursor</a><br>
 
 &lowast;
+<a href="system/debian/vbox_find_ip.htm">
+如何在VirtualBox找出Client IP</a><br>
+
+&lowast;
 <a href="system/debian/vim_ctrl_s.htm">
 解決"vim CTRL+S"問題</a><br>
 
