--- a/umpc/d88/teardown.htm
+++ b/umpc/d88/teardown.htm
@@ -106,7 +106,16 @@ WM8731、AR1010<br>
 <img src="teardown/19.jpg" class="maxSize"><br><br>
 
 A3V56S40ETP-G6<br>
-<img src="teardown/20.jpg" class="maxSize">
+<img src="teardown/20.jpg" class="maxSize"><br><br>
+
+A面<br>
+<img src="teardown/21.jpg" class="maxSize"><br><br>
+
+B面<br>
+<img src="teardown/22.jpg" class="maxSize"><br><br>
+
+LMS430HF15<br>
+<img src="teardown/23.jpg" class="maxSize">
 </p>
 
 <p>
