--- a/umpc/d100/teardown.htm
+++ b/umpc/d100/teardown.htm
@@ -48,28 +48,67 @@
 <p><b>介紹</b></p>
 <hr size="1">
 <p>
+正面<br>
 <img src="teardown/1.jpg" class="maxSize"><br><br>
+
+下邊<br>
 <img src="teardown/2.jpg" class="maxSize"><br><br>
+
+耳機孔、MicroSD、MiniUSB<br>
 <img src="teardown/3.jpg" class="maxSize"><br><br>
+
+上邊<br>
 <img src="teardown/4.jpg" class="maxSize"><br><br>
+
+觸控筆<br>
 <img src="teardown/5.jpg" class="maxSize"><br><br>
+
+鍵盤還可以～<br>
 <img src="teardown/6.jpg" class="maxSize"><br><br>
+
+背面<br>
 <img src="teardown/7.jpg" class="maxSize"><br><br>
+
+背蓋<br>
 <img src="teardown/8.jpg" class="maxSize"><br><br>
+
+PCB<br>
 <img src="teardown/9.jpg" class="maxSize"><br><br>
+
+拿掉電池<br>
 <img src="teardown/10.jpg" class="maxSize"><br><br>
+
+PCB<br>
 <img src="teardown/11.jpg" class="maxSize"><br><br>
 
 K4M51323PS-HG60、TCC7901、29F32G08CBAAA<br>
 <img src="teardown/12.jpg" class="maxSize"><br><br>
+
+WM8731S<br>
 <img src="teardown/13.jpg" class="maxSize"><br><br>
+
+鍋仔片<br>
 <img src="teardown/14.jpg" class="maxSize"><br><br>
-<img src="teardown/15.jpg" class="maxSize"><br><br>
-<img src="teardown/16.jpg" class="maxSize"><br><br>
+
+鍵盤<br>
+<img src="teardown/15.jpg" class="maxSize"><br>
+<img src="teardown/16.jpg" class="maxSize"><br>
 <img src="teardown/17.jpg" class="maxSize"><br><br>
+
+屏<br>
 <img src="teardown/18.jpg" class="maxSize"><br><br>
+
+FPC<br>
 <img src="teardown/19.jpg" class="maxSize"><br><br>
-<img src="teardown/20.jpg" class="maxSize">
+
+A面<br>
+<img src="teardown/20.jpg" class="maxSize"><br><br>
+
+B面<br>
+<img src="teardown/21.jpg" class="maxSize"><br><br>
+
+LMS430HF15<br>
+<img src="teardown/22.jpg" class="maxSize">
 </p>
 
 <p>
